# nnunet_server

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: auth.py  main.py  scripts.py
app/api/v1/: routes_jobs.py  routes_models.py  routes_plan_and_preprocess.py  routes_predictions.py  routes_raw_dataset_json.py  routes_raw_images_and_labels.py
app/core/: config.py  logging_config.py  nnunet_plan_and_preprocess.py  nnunet_raw.py  nnunet_worker.py  test_worker.py
scripts/: nnunet_predict.sh  template.sh
tests/: submit_predict_queue.py  submit_test_jobs.py  submit_test_predict.py  test_prediction_endpoint.py
