[tool.poetry]
name = "nnunet_server"
version = "0.1.0"
description = "FastAPI backend for nnU-Net"
authors = ["Jin-Koo Kim <jinkoo2@gmail.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
dev = "app.scripts:run_dev"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
