[tool.poetry]
name = "nnunet_server"
version = "0.1.0"
description = "FastAPI backend for nnU-Net"
authors = ["Jin-Koo Kim <jinkoo2@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.6.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.12.0"
aiofiles = "^25.1.0"
python-multipart = "^0.0.20"
nnunetv2 = "^2.6.2"
rq = "^2.6.0"
rq-dashboard = "^0.8.5"
redis = "^7.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
dev = "app.scripts:run_dev"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
